<resources>
    <string name="app_name">HITS alapú hálózati algoritmus a borkóstolók szakmai ismereteinek értékelésére</string>
    <string name="action_settings">Settings</string>
    <string name="activity_title_home">Notes</string>
    <string name="lbl_new_note_title">New Person</string>
    <string name="lbl_edit_note_title">Edit Person</string>
    <string name="hint_enter_note">Enter your person\'s data!</string>
    <string name="hint_birthday">Enter birthday</string>
    <string name="hint_enter_firstName">Enter First Name!</string>
    <string name="hint_enter_lastName">Enter Last Name!</string>
    <string name="hint_enter_idCard">Enter ID card number!</string>
    <string name="nev">Név</string>

    <string name="ures_bor_lista">Nincsenek hozzáadott borok!</string>
    <string name="msg_no_notes">No persons found!</string>
    <string name="ures_kostolo_lista">Nincsenek kóstolók hozzáadva!</string>
    <string name="hint_enter_wine_name">Enter wine Name!</string>
    <string name="hint_enter_type">Enter wine type!</string>
    <string name="hint_enter_year">The vintage of a wine!</string>
    <string name="hint_enter_color">The color of wine!</string>
    <string name="hint_enter_alcohol">Alcohol content of wine!</string>
    <string name="hint_enter_temperature">The consumption temperature of the wine!</string>
    <string name="hint_enter_text">Here\'s where text is!</string>
    <string name="ures_biralati_lista">Nincsenek hozzáadva még bírálatok</string>


    <string name="promt">Válasz egy értéket</string>
    <string-array name="megjelenesTisztasag">
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
    </string-array>

    <string-array name="megjelenesSzin">
        <item>10</item>
        <item>8</item>
        <item>6</item>
        <item>4</item>
        <item>2</item>
    </string-array>

    <string-array name="illatIntenzitas">
        <item>8</item>
        <item>7</item>
        <item>6</item>
        <item>4</item>
        <item>2</item>
    </string-array>

    <string-array name="illatKarakter">
        <item>6</item>
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
    </string-array>

    <string-array name="illatMinoseg">
        <item>16</item>
        <item>14</item>
        <item>12</item>
        <item>10</item>
        <item>8</item>
    </string-array>

    <string-array name="zamatIntenzitas">
        <item>8</item>
        <item>7</item>
        <item>6</item>
        <item>4</item>
        <item>2</item>
    </string-array>

    <string-array name="zamatKarakter">
        <item>6</item>
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
    </string-array>

    <string-array name="zamazMinoseg">
        <item>22</item>
        <item>19</item>
        <item>16</item>
        <item>13</item>
        <item>10</item>
    </string-array>

    <string-array name="zamatHosszusag">
        <item>8</item>
        <item>7</item>
        <item>6</item>
        <item>5</item>
        <item>4</item>
    </string-array>

    <string-array name="osszbenyomas">
        <item>11</item>
        <item>10</item>
        <item>9</item>
        <item>8</item>
        <item>7</item>
    </string-array>
</resources>